--- a/2019w21.md
+++ b/2019w21.md
@@ -3,6 +3,8 @@
 ## 数据仓库
 
 - [10 分钟简读经典著作 Data Warehouse Toolkit](https://www.yejianye.com/2018/05/21/data-warehouse-toolkit/)
+  
+  > 很好的入门，介绍了一些数据仓库设计的方法和技巧
 
 ## 大数据
 
@@ -11,7 +13,8 @@
 ## Devops
 
 - [从技术雷达看DevOps十年-DevOps和持续交付](https://zhuanlan.zhihu.com/p/62687182)
-    追根溯源的考据
+
+  > 追根溯源的考据
 
 ## 分布式
 
@@ -21,10 +24,15 @@
 
 - [系统设计入门](https://github.com/donnemartin/system-design-primer/blob/master/README-zh-Hans.md)
 - [a lookup table of similar tech & services](https://github.com/jhuangtw-dev/xg2xg/blob/master/README.md)
+- [阿里研究员谷朴：API 设计最佳实践的思考](https://yq.aliyun.com/articles/683044)
+   
+  > 原文的梳理非常不错，概念性和实践具备，参考资料当中干货更多。
 
 ## 服务网格
 
 - [Linkerd v2: How Lessons from Production Adoption Resulted in a Rewrite of the Service Mesh](https://www.infoq.com/articles/linkerd-v2-production-adoption)
+  
+  > 简单来讲v1版本太重量级(消耗资源)，学习曲线太陡峭(dtab)，v2做了三点改进`最小化资源消耗`,`可靠`和`简单`。
 
 ## 日志收集
 
@@ -33,5 +41,24 @@
 ## 代码编写
 
 - [品阿里 Java 开发手册有感](https://zhuanlan.zhihu.com/p/61161930)
+
+  > 阿里的Java开发手册真的是功德无量，如果融会贯通，绝对是一个好码农:)
   
+## 分布式事务
+
+- [ByteJTA](https://github.com/liuyangming/ByteJTA)
+- [distributed-flexible-transaction](https://github.com/bingyufight/distributed-flexible-transaction)
+- [EasyTransaction](https://github.com/QNJR-GROUP/EasyTransaction)
+- [txlcn](https://www.txlcn.org/zh-cn/)
+- [云原生时代的分布式事务](https://mp.weixin.qq.com/s?__biz=MzAwMDU1MTE1OQ==&mid=2653550833&idx=1&sn=c5914601ae03e4ca3294c112dffb7a17&chksm=813a6969b64de07fe41dfeaa0c0aca0a14375fe9338a7790341e4292ad000db333ecb0492ecc&scene=21#wechat_redirect)
+- [seata, formly fescar](https://github.com/seata/seata)
+
+## Linux
+
+- [命令行的艺术](https://github.com/jlevy/the-art-of-command-line/blob/master/README-zh.md)
+
+## 系统架构
+
+- [The Production Environment at Google, from the Viewpoint of an SRE](https://landing.google.com/sre/sre-book/chapters/production-environment/)
   
+  > 深入浅出的介绍了Google的生产环境的架构。
