--- a/2019w21.md
+++ b/2019w21.md
@@ -43,6 +43,10 @@
 - [品阿里 Java 开发手册有感](https://zhuanlan.zhihu.com/p/61161930)
 
   > 阿里的Java开发手册真的是功德无量，如果融会贯通，绝对是一个好码农:)
+
+- [2019 Java发展趋势报告：Java老矣，Java正年轻](https://mp.weixin.qq.com/s/uFe0SqWWaJY4KE19ZMon_A)
+
+  > Spring Boot/Cloud已经老了，后继无人啊；kotlin有光明的前途；其他的都太nichi了
   
 ## 分布式事务
 
