--- a/2019w21.md
+++ b/2019w21.md
@@ -9,6 +9,8 @@
 ## 大数据
 
 - [Comparison of the Open Source OLAP Systems for Big Data: ClickHouse, Druid and Pinot](https://medium.com/@leventov/comparison-of-the-open-source-olap-systems-for-big-data-clickhouse-druid-and-pinot-8e042a5ed1c7)
+- [TimescaleDB vs. InfluxDB: Purpose built differently for time-series data](https://blog.timescale.com/timescaledb-vs-influxdb-for-time-series-data-timescale-influx-sql-nosql-36489299877/)
+- [Top 10 Time Series Databases](http://outlyer.com/blog/top10-open-source-time-series-databases/)
 
 ## Devops
 
